--- a/appdefs.yml
+++ b/appdefs.yml
@@ -56,6 +56,14 @@ app:
           [default seccomp profile]: https://github.com/moby/moby/blob/master/vendor/github.com/moby/profiles/seccomp/default.json
           [seccomp profile]: https://docs.docker.com/engine/security/seccomp/
   changelog:
+    - version: 25.12.2
+      date: 2025-12-20
+      changes:
+        - 'Updated Chromium to version 143.0.7499.40-r0.'
+        - 'Updated baseimage to version 4.10.4, which brings the following changes:'
+        - '2:Web audio is now automatically re-enabled upon first user interaction.'
+        - '2:Improved robustness of GPU devices detection.'
+        - '2:Command key on Mac devices has been remapped to better match Linux application interactions.'
     - version: 25.12.1
       date: 2025-12-12
       changes:
